# git_repo_info

./: .pre-commit-config.yaml  LICENSE  README.md  config.py  git_repo_info.py  pyproject.toml  report.py
